@startuml

title __DASHBOARD's Class Diagram__\n

  namespace ru.ubunterro.servicehelper {
    namespace ui.dashboard {
      class ru.ubunterro.servicehelper.ui.dashboard.DashboardFragment {
          + onCreateView()
      }
    }
  }
  

  namespace ru.ubunterro.servicehelper {
    namespace ui.dashboard {
      class ru.ubunterro.servicehelper.ui.dashboard.DashboardViewModel {
          - mText : MutableLiveData<String>
          + DashboardViewModel()
          + getText()
      }
    }
  }
  

  ru.ubunterro.servicehelper.ui.dashboard.DashboardFragment -up-|> android.support.v4.app.Fragment
  ru.ubunterro.servicehelper.ui.dashboard.DashboardFragment o-- ru.ubunterro.servicehelper.ui.dashboard.DashboardViewModel : dashboardViewModel
  ru.ubunterro.servicehelper.ui.dashboard.DashboardViewModel -up-|> android.arch.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
